Fixed fotter overlapping issue.

--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,3 @@
-#gdbaseFtrain{
-  height: 100vh;
-}
 main.login,
 main.signup {
   position: absolute;
